bynkc/tests/fixtures/positive/335_list_par_traverse/input.bynk
commons demo.partraverse

fn notify(id: Int) -> Effect[()] {
  Effect.pure(())
}

fn notifyAll(ids: List[Int]) -> Effect[()] {
  do ids.parTraverse((id: Int) => notify(id))
}
