bynkc/tests/fixtures/negative/101_list_filter_predicate_not_bool/input.bynk
commons c {
  fn bad(xs: List[Int]) -> List[Int] {
    xs.filter((x) => x + 1)
  }
}
